--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body ng-app="todoApp">
     <div class="container">
-        <h1>📋 My Todo List</h1>
+        <h1><i class="fas fa-clipboard-list"></i> My Todo List</h1>
         <todo-list></todo-list>
     </div>
 </body>
